--- a/actividades/ej_02/styles/base.css
+++ b/actividades/ej_02/styles/base.css
@@ -26,11 +26,30 @@ footer {
     color: white;
     text-align: center;
     padding: 10px 0;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
 
 footer p {
     margin: 5px 0;
+}
+
+button {
+    background: linear-gradient(90deg, #000000 0%, #000000 100%);
+    color: white;
+    border: none;
+    padding: 12px 32px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.rgb-value {
+    width: 60px;
+    padding: 2.5px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: center;
 }
