--- a/actividades/ej_02/styles/base.css
+++ b/actividades/ej_02/styles/base.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #176fc7;
+    background-color: #D42704;
     padding: 20px 0;
     text-align: center;
 }
@@ -22,11 +22,11 @@ main {
 }
 
 footer {
-    background-color: #176fc7;
+    background-color: #D42704;
     color: white;
     text-align: center;
     padding: 10px 0;
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
@@ -36,20 +36,10 @@ footer p {
 }
 
 button {
-    background: linear-gradient(90deg, #000000 0%, #000000 100%);
+    margin: 10px;
     color: white;
-    border: none;
-    padding: 12px 32px;
-    font-size: 1.1rem;
-    font-weight: 600;
-    cursor: pointer;
-}
-
-.rgb-value {
-    width: 60px;
-    padding: 2.5px;
+    background: #D42704;
+    padding: 10px 20px;
     font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    text-align: center;
+    cursor: pointer;
 }
