--- a/actividades/ej_03/styles/base.css
+++ b/actividades/ej_03/styles/base.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #176fc7;
+    background-color: #D42704;
     padding: 20px 0;
     text-align: center;
 }
@@ -22,7 +22,7 @@ main {
 }
 
 footer {
-    background-color: #176fc7;
+    background-color: #D42704;
     color: white;
     text-align: center;
     padding: 10px 0;
