--- a/actividades/ej_02/styles/base.css
+++ b/actividades/ej_02/styles/base.css
@@ -38,7 +38,7 @@ footer p {
 button {
     margin: 10px;
     color: white;
-    background: #D42704;
+    background: #000000;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
