--- a/actividades/ej_03/styles/base.css
+++ b/actividades/ej_03/styles/base.css
@@ -21,8 +21,9 @@ main {
     min-height: 70vh;
 }
 
+
 footer {
-    background-color: #D42704;
+    background-color: #ca2504e3;
     color: white;
     text-align: center;
     padding: 10px 0;
