--- a/actividades/ej_03/styles/base.css
+++ b/actividades/ej_03/styles/base.css
@@ -23,7 +23,7 @@ main {
 
 
 footer {
-    background-color: #ca2504e3;
+    background-color: #D42704;
     color: white;
     text-align: center;
     padding: 10px 0;
